# CodingInterViewGuide

./: .gitattributes  CMakeLists.txt  README.md
Chapter01_Stack&Queue/: 01.Stack_getMin00.c  01.Stack_getMin01.c  02.QueueConsistOf2Stacks.c  03.ReverseStackOnlyByRecurion.c  04.DogCatQueue.c  05.SortStackByStack.c  06.GetMaxWindow.c
Chapter02_LinkedList/: 01.PrintCommonPart.c
Stack/: Stack.c  Stack.h
datastructure/: LinkedList.c  LinkedList.h  PetQueue.c  PetQueue.h  Queue.c  Queue.h  Stack.c
